# logger

./: .gitattributes  .gitignore  .travis.yml  Makefile  Makefile.am  README.md  configure.ac  logger.c  logger.h
tests/: Makefile.am  color_test.c  logger_test.c
